# libmad

./: Makefile.am  Makefile.in  abxtest  abxtest.1  acconfig.h  aclocal.m4  audio.c  audio.h  audio_au.c  audio_empeg.c  audio_hex.c  audio_null.c  audio_oss.c  audio_raw.c  audio_snd.c  audio_sun.c  audio_wav.c  audio_wave.c  audio_win32.c  config.h.in  configure  configure.in  equalizer.c  equalizer.h  filter.c  filter.h  global.h  id3.c  id3.h  id3v2.c  id3v2.gperf  id3v2.h  mad123.c  madmix.c  madplay.1  madplay.c  madtime.c  minimad.c  player.c  player.h  (+6 more)
libid3/: COPYRIGHT  Makefile.am  Makefile.in  acconfig.h  compat.c  compat.gperf  compat.h  config.h.in  configure  configure.in  crc.c  crc.h  debug.c  debug.h  field.c  field.h  file.c  file.h  frame.c  frame.h  frametype.c  frametype.gperf  frametype.h  genre.dat.in  genre.dat.sed  global.h  id3.h  latin1.c  latin1.h  parse.c  parse.h  render.c  render.h  tag.c  tag.h  ucs4.c  ucs4.h  utf16.c  utf16.h  utf8.c  (+5 more)
libid3tag/: Makefile.am  Makefile.in  compat.c  compat.gperf  config.h.in  configure  configure.in  crc.c  field.c  file.c  frame.c  global.h  id3tag.h  parse.c  render.c  tag.c
libmad/: Makefile.in  configure  version.h
libz/: Makefile.in  configure  configure.in
msvc++/: Makefile.am  Makefile.in
msvc++/demo/: Makefile.am  Makefile.in  config.h  demo.dsp  demo.dsw  main.c
msvc++/libid3/: Makefile.am  Makefile.in  config.h  libid3.dsp
msvc++/libid3tag/: Makefile.in  config.h
msvc++/libmad/: Makefile.in  config.h  mad.h
msvc++/libz/: Makefile.in
po/: POTFILES.in  cat-id-tbl.c  en.gmo  en.po  es.gmo  es.po  fr.gmo  fr.po  hr.gmo  hr.po  mad.pot  no.gmo  no.po
winamp/: Makefile.in  compat.c  in_mad.c  in_mad.psc.in  in_mad.txt  messages.h  messages.mc  resource.h  resource.rc
