dnl -*- m4 -*-
dnl
dnl libz - zlib compression library
dnl
AC_REVISION([$Id: configure.in,v 1.1 2001/10/10 19:03:39 rob Exp $])dnl

dnl Process this file with autoconf to produce a configure script.

AC_INIT(zlib.h)
AM_INIT_AUTOMAKE(libz, 1.1.3)

dnl Checks for programs.

AC_PROG_CC
AC_PROG_RANLIB

dnl Create output files.

AC_OUTPUT(Makefile)
